solved bug that was throwing file not found exception